--- a/sass/modules/_profile.scss
+++ b/sass/modules/_profile.scss
@@ -80,10 +80,8 @@ User Profile
   }
 
   .skill-list {
-
     overflow: hidden;
     display: inline-block;
-    text-align: center;
   }
 
   .skill-tag {
